--- a/client/theme/less/sidebar.import.less
+++ b/client/theme/less/sidebar.import.less
@@ -92,7 +92,13 @@
 
 
 
-
+//Fix for Scrollbars z-index //Need to investigate
+section.news ul.tabsContent, ul.resourcesContent{
+    //position: relative;
+    //z-index: -1;
+    .shadowNone;
+    background-color: transparent;
+}
 
 
 
